fix: nav vertical spacing - sticky

--- a/css/styles.css
+++ b/css/styles.css
@@ -126,7 +126,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  position: fixed;
+  position: sticky;
   top: 0;
   right: 0;
   left: 0;
