--- a/scss/components/_navigation.scss
+++ b/scss/components/_navigation.scss
@@ -4,7 +4,7 @@
   align-items: center;
   justify-content: space-between;
 
-  position: fixed;
+  position: sticky;
   top: 0;
   right: 0;
   left: 0;
